[tool.poetry]
name = "gohan"
version = "0.1.0"
description = "gohan is a Python Natural Language Processing (NLP) tool."
authors = ["hong <j50508@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pykakasi = "^2.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
